# pyroutine

./: LICENSE  README.md  pyproject.toml
benchmarks/: RESULTS.md  __init__.py  _harness.py  bench_concurrency.py  bench_http_client.py  bench_http_server.py  bench_scaling.py  results.json  run_all.py  servers.py
examples/: cpu_benchmark.py  echo_server.py  fanout.py  http_client_example.py  http_server_example.py  matrix_benchmark.py  million.py  pipeline.py  starvation_demo.py  web_server_benchmark.py
src/pyroutine/: __init__.py  _dns.py  _net.py  _pyroutine.py  _queue.py  _runtime.py  http.py
tests/: test_api_coverage.py  test_blocking.py  test_dns.py  test_http.py  test_http_server.py  test_interpreter.py  test_netpoll.py  test_parallelism.py  test_preemption.py  test_pythonic.py  test_scheduler.py  test_timeout.py  test_waiter_timeout.py
