[project]
name = "pyroutine-rt"
version = "0.1.0"
description = "Goroutine-style M:N concurrency for free-threaded Python 3.14t"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "greenlet>=3.5.1",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

# Distribution name is "pyroutine-rt" but the import package stays "pyroutine".
# Pin the module name so uv_build packages src/pyroutine (not src/pyroutine_rt).
[tool.uv.build-backend]
module-name = "pyroutine"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
bench = ["fastapi", "uvicorn", "flask", "aiohttp", "httpx", "requests"]
